{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 589,
  "lineage": "a922ccea-f5cf-39bd-de92-37b85d4fb66f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "obligatorio_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ededff12e34e59e",
            "arn": "arn:aws:ec2:us-east-1:750038500402:instance/i-0116bcb668dac2d6a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0116bcb668dac2d6a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fc1906936e4fae0a",
            "private_dns": "ip-10-0-1-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.238",
            "public_ip": "52.90.71.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02ae84468b96f31ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f29d952bf553627e",
            "tags": {
              "Name": "instance-frontend",
              "obligatorio": "True"
            },
            "tags_all": {
              "Name": "instance-frontend",
              "obligatorio": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-026dc5523439d7652",
              "sg-09759438544e8129d"
            ]
          },
          "dependencies": [
            "aws_eks_cluster.obligatorio_cluster",
            "aws_eks_node_group.obligatorio_node_group",
            "aws_security_group.http_sg",
            "aws_security_group.ssh_sg",
            "aws_subnet.obligatorio_public_subnet",
            "aws_subnet.obligatorio_public_subnet2",
            "aws_vpc.vpc_obligatorio",
            "data.aws_iam_role.labrole-arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "obligatorio_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:internet-gateway/igw-0339e5eb6bf5ada14",
            "id": "igw-0339e5eb6bf5ada14",
            "owner_id": "750038500402",
            "tags": {
              "Name": "obligatorioc1-internet-gateway",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorioc1-internet-gateway",
              "terraform": "True"
            },
            "vpc_id": "vpc-0f7cc365de98fecc0"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750038500402:loadbalancer/app/obligatorio-lb/0fac39a269de56f0",
            "arn_suffix": "app/obligatorio-lb/0fac39a269de56f0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "obligatorio-lb-1436569661.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:750038500402:loadbalancer/app/obligatorio-lb/0fac39a269de56f0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "obligatorio-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-026dc5523439d7652",
              "sg-09759438544e8129d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0558d378e9c68e3e7"
              },
              {
                "subnet_id": "subnet-0f29d952bf553627e"
              }
            ],
            "subnets": [
              "subnet-0558d378e9c68e3e7",
              "subnet-0f29d952bf553627e"
            ],
            "tags": {
              "Name": "obligatorio-lb",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorio-lb",
              "terraform": "True"
            },
            "vpc_id": "vpc-0f7cc365de98fecc0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_eks_cluster.obligatorio_cluster",
            "aws_eks_node_group.obligatorio_node_group",
            "aws_instance.obligatorio_frontend",
            "aws_lb_target_group.obligatorio",
            "aws_lb_target_group_attachment.obligatorio_frontend",
            "aws_security_group.http_sg",
            "aws_security_group.ssh_sg",
            "aws_subnet.obligatorio_public_subnet",
            "aws_subnet.obligatorio_public_subnet2",
            "aws_vpc.vpc_obligatorio",
            "data.aws_iam_role.labrole-arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750038500402:targetgroup/obligatorio-target-group/236731b731f319b9",
            "arn_suffix": "targetgroup/obligatorio-target-group/236731b731f319b9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:750038500402:targetgroup/obligatorio-target-group/236731b731f319b9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "obligatorio-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f7cc365de98fecc0"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "obligatorio_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:750038500402:targetgroup/obligatorio-target-group/236731b731f319b9-20230623223237443700000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:750038500402:targetgroup/obligatorio-target-group/236731b731f319b9",
            "target_id": "i-0116bcb668dac2d6a"
          },
          "dependencies": [
            "aws_eks_cluster.obligatorio_cluster",
            "aws_eks_node_group.obligatorio_node_group",
            "aws_instance.obligatorio_frontend",
            "aws_lb_target_group.obligatorio",
            "aws_security_group.http_sg",
            "aws_security_group.ssh_sg",
            "aws_subnet.obligatorio_public_subnet",
            "aws_subnet.obligatorio_public_subnet2",
            "aws_vpc.vpc_obligatorio",
            "data.aws_iam_role.labrole-arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "obligatorio_public_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0339e5eb6bf5ada14",
            "id": "r-rtb-0b275fb819f14f10c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b275fb819f14f10c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.obligatorio_igw",
            "aws_route_table.obligatorio_route_table",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "obligatorio_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:route-table/rtb-0b275fb819f14f10c",
            "id": "rtb-0b275fb819f14f10c",
            "owner_id": "750038500402",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0339e5eb6bf5ada14",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "obligatorio-route-table",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorio-route-table",
              "terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7cc365de98fecc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "obligatorio_public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061a48dfd1de54080",
            "route_table_id": "rtb-0b275fb819f14f10c",
            "subnet_id": "subnet-0f29d952bf553627e"
          },
          "dependencies": [
            "aws_route_table.obligatorio_route_table",
            "aws_subnet.obligatorio_public_subnet",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:security-group/sg-01a9c2df133603289",
            "description": "Security group for RDSzsdatabase",
            "egress": [],
            "id": "sg-01a9c2df133603289",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09759438544e8129d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "grupo-seguridad-db",
            "name_prefix": "",
            "owner_id": "750038500402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grupo-seguridad-db",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "grupo-seguridad-db",
              "terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7cc365de98fecc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.http_sg",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:security-group/sg-00272c2cf0fe18429",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-00272c2cf0fe18429",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "750038500402",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f7cc365de98fecc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:security-group/sg-09759438544e8129d",
            "description": "Security group for HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09759438544e8129d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "grupo-seguridad-http",
            "name_prefix": "",
            "owner_id": "750038500402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grupo-seguridad-http",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "grupo-seguridad-http",
              "terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7cc365de98fecc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:security-group/sg-0726139f19f06ea79",
            "description": "Security group for Redis",
            "egress": [],
            "id": "sg-0726139f19f06ea79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "obligatorio-redis-sg",
            "name_prefix": "",
            "owner_id": "750038500402",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f7cc365de98fecc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "s3_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:security-group/sg-09395cb08490548c2",
            "description": "Security group for S3 bucket access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09395cb08490548c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "grupo-seguridad-s3-access",
            "name_prefix": "",
            "owner_id": "750038500402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grupo-seguridad-s3-access",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "grupo-seguridad-s3-access",
              "terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7a0bd8f5414128"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:security-group/sg-026dc5523439d7652",
            "description": "Security group for SSH traffic",
            "egress": [],
            "id": "sg-026dc5523439d7652",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "grupo-seguridad-ssh",
            "name_prefix": "",
            "owner_id": "750038500402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grupo-seguridad-ssh",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "grupo-seguridad-ssh",
              "terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7cc365de98fecc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "obligatorio_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:subnet/subnet-0555710f86eeb3762",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0555710f86eeb3762",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750038500402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "obligatorio-private-subnet",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorio-private-subnet",
              "terraform": "True"
            },
            "vpc_id": "vpc-0f7cc365de98fecc0"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "obligatorio_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:subnet/subnet-01f94503dfdb0d3c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f94503dfdb0d3c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750038500402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "obligatorio-private-subnet-2",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorio-private-subnet-2",
              "terraform": "True"
            },
            "vpc_id": "vpc-0f7cc365de98fecc0"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "obligatorio_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:subnet/subnet-0f29d952bf553627e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f29d952bf553627e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750038500402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "obligatorio-public-subnet",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorio-public-subnet",
              "terraform": "True"
            },
            "vpc_id": "vpc-0f7cc365de98fecc0"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "obligatorio_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:subnet/subnet-0558d378e9c68e3e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0558d378e9c68e3e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750038500402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "obligatorio-public-subnet2",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorio-public-subnet2",
              "terraform": "True"
            },
            "vpc_id": "vpc-0f7cc365de98fecc0"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:vpc/vpc-0f7cc365de98fecc0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa1580d1f1cec5d4",
            "default_route_table_id": "rtb-0d4db889e98419a28",
            "default_security_group_id": "sg-006e88f2a715a61a1",
            "dhcp_options_id": "dopt-089184d729af7f812",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f7cc365de98fecc0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4db889e98419a28",
            "owner_id": "750038500402",
            "tags": {
              "Name": "obligatorio-vpc",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorio-vpc",
              "terraform": "True"
            }
          }
        }
      ]
    }
  ]
}